# Mahoyo_Patcher

./: .editorconfig  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  classes.py  extractor.py  honorifics.py  main.py  pyproject.toml  replacement.py  replacer.py  requirements.txt  utils.py
.github/workflows/: ci-cd.yml
json/: americanisms.json  honorific_edge_cases.json  jp_to_en_honorifics.json  jp_to_en_names.json  name_order.json  unit_conversions.json
scripts/: build_executable.bat  build_executable.sh  build_package.sh  cleanup.sh  generate_spec.py
spec/: Mahoyo_Patcher.spec
src/mahoyo_patcher/: __init__.py  __main__.py  app.py  constants.py  utils.py
src/mahoyo_patcher/core/: __init__.py  honorifics.py  patcher.py
src/mahoyo_patcher/data/: jp_to_en_honorifics.json  jp_to_en_names.json  romanizations.json  translation_mistakes.json
src/mahoyo_patcher/gui/: __init__.py  window.py  worker.py
src/mahoyo_patcher/models/: __init__.py  hfa_manager.py  language.py  replacement.py  script_manager.py
tests/: test_patcher.py
tests/fixtures/: script_en.txt  script_en_patched.txt  script_jp.txt
utils/: replacement_helper.py
